@@ -26,5 +26,9 @@ add_executable(dualRXTX dualRXTX.cpp)
 set_target_properties(dualRXTX PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 target_link_libraries(dualRXTX LimeSuite)
 
+add_executable(gpio_example gpio_example.cpp)
+set_target_properties(gpio_example PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+target_link_libraries(gpio_example LimeSuite)
+
 
 
