@@ -5,6 +5,7 @@ Release 17.09.1 (pending)
 - Fixed WriteStream() end of burst flushing in fifo.h
 - Fixed abs() overload compiler issue in lms7_device.cpp
 - Removed private include in mcu_program/host_src/main.cpp
+- Added simple GPIO example utilizing functions from LimeSuite.h
 
 Release 17.09.0 (2017-09-01)
 ==========================
